--- a/html/login.html
+++ b/html/login.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
-    <!-- Iconos flotantes de fondo -->
     <div class="iconos-fondo">
         <div class="icono-flotante">💳</div>
         <div class="icono-flotante">📱</div>
@@ -20,7 +19,6 @@
         <div class="icono-flotante">📊</div>
     </div>
 
-    <!-- Partículas animadas -->
     <div class="particulas">
         <div class="particula"></div>
         <div class="particula"></div>
@@ -29,9 +27,7 @@
         <div class="particula"></div>
     </div>
 
-    <!-- Contenedor principal -->
     <div class="contenedor-login">
-        <!-- Panel izquierdo - Información -->
         <div class="panel-izquierdo">
                 <div class="contenido-info">
                 <h1>Bienvenido al Sistema de Gestion y Control de Yape </h1>
@@ -62,7 +58,6 @@
             </div>
         </div>
 
-        <!-- Panel derecho - Formulario -->
         <div class="panel-derecho">
             <div class="contenedor-formulario">
                 <div class="encabezado-formulario">
@@ -75,14 +70,14 @@
 
                 <form class="formulario-login" id="formularioLogin">
                     <div class="grupo-formulario">
-                        <label for="email">Correo Electrónico</label>
+                        <label for="username">Usuario</label>
                         <div class="envoltorio-input">
-                            <span class="icono-input">📧</span>
+                            <span class="icono-input">👤</span>
                             <input 
-                                type="email" 
-                                id="email" 
-                                name="email" 
-                                placeholder="tu@email.com"
+                                type="text" 
+                                id="username" 
+                                name="username" 
+                                placeholder="Ej: admin"
                                 required
                             >
                         </div>
