--- a/html/index.html
+++ b/html/index.html
@@ -134,18 +134,19 @@
                                 <button type="button" class="segmento" data-value="4">Nota</button>
                                 <input type="hidden" id="inputComprobante" value="2">
                             </div>
-                            <div style="margin-top: 15px; padding: 10px; background: #f8f9fa; border: 1px dashed #ccc; border-radius: 8px;">
-    <p style="font-size: 0.75rem; font-weight: bold; color: #666; margin-bottom: 5px;">🔧 Opcional (Si deseas cambiar)</p>
-    <div style="display: flex; gap: 10px;">
+                           <div style="margin-top: 15px; padding: 10px; background: #fff; border: 1px dashed #bbb; border-radius: 8px;">
+    <p style="font-size: 0.75rem; font-weight: bold; color: #666; margin-bottom: 5px;">🔧 Opciones de Registro (Opcional)</p>
+    <div style="display: flex; gap: 8px;">
         <div style="flex: 1;">
-            <input type="datetime-local" id="fechaManualYape" style="width: 100%; font-size: 0.8rem; border: 1px solid #ddd; padding: 5px; border-radius: 4px;">
+            <label style="font-size: 0.7rem;">Fecha Manual</label>
+            <input type="datetime-local" id="fechaManualYape" style="width: 100%; font-size: 0.8rem; border: 1px solid #ccc; border-radius: 4px;">
         </div>
         <div style="flex: 1;">
-            <input type="text" id="ticketManualYape" placeholder="N° Boleta (Ej: 450)" style="width: 100%; font-size: 0.8rem; border: 1px solid #ddd; padding: 5px; border-radius: 4px;">
+            <label style="font-size: 0.7rem;">N° Doc. Externo</label>
+            <input type="text" id="ticketManualYape" placeholder="Ej: F001-402" style="width: 100%; font-size: 0.8rem; border: 1px solid #ccc; padding: 4px; border-radius: 4px;">
         </div>
     </div>
 </div>
-
                             <button type="submit" class="btn-registrar-grande">CONFIRMAR PAGO <span class="flecha">→</span></button>
                         </form>
                     </div>
