--- a/html/index.html
+++ b/html/index.html
@@ -130,7 +130,7 @@
                             </div>
                             <div class="input-operacion-wrapper">
                                 <label>N° Operación (Ultimos 4 o Completo)</label>
-                                <input type="text" id="numOperacion" placeholder="Ej: 123456" maxlength="20" required>
+                                <input type="text" id="numOperacion" placeholder="Ej: 12345678" maxlength="20" required>
                             </div>
                             <div class="selector-tipo" id="selectorComprobante">
                                 <button type="button" class="segmento seleccionado" data-value="2">Boleta</button>
