--- a/html/index.html
+++ b/html/index.html
@@ -144,7 +144,7 @@
         </div>
 
         <div class="display-comprobante-wrapper">
-            <label>Número de Boleta/Factura/Nota</label>
+            <label>Número de Boleta/Factura/Nota (Opcional)</label>
             <input type="text" id="txtComprobanteYape" placeholder="Ej: B001-00000000">
         </div>
 
@@ -200,7 +200,7 @@
         </div>
 
         <div class="display-comprobante-wrapper">
-            <label>Número de Boleta/Factura/Nota</label>
+            <label>Número de Boleta/Factura/Nota (Opcional)</label>
             <input type="text" id="txtComprobanteTarjeta" placeholder="Ej: B001-00000000">
         </div>
         
